# fastapi-cloud-workflows

./: CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml
app/: main.py
app/flows/: order.py  payments.py  user.py
docs/: 01-critique.md  02-architecture.md  03-mvp-scope.md  04-open-questions.md  05-references.md  06-roadmap.md  07-decisions.md  spec-deterministic-naming.md  spec-policies.md
examples/app/: Dockerfile  main.py
examples/app/flows/: echo_name.py  jokes.py  order.py  payments.py  post_story.py  user.py
src/fastapi_cloudflow/: __init__.py  cli.py  core.py  runtime.py
src/fastapi_cloudflow/codegen/: workflows.py
src/fastapi_cloudflow/core/: __init__.py  arg.py  step.py  types.py  workflow.py
tests/: README.md  test_app_examples.py  test_arg_helpers.py  test_argexpr.py  test_codegen.py  test_codegen_args.py  test_codegen_complex.py  test_codegen_snapshots.py  test_codegen_timeout.py  test_core_errors.py  test_exceptions.py  test_fill_remaining.py  test_multiple_workflows.py  test_registry.py  test_runtime.py  test_runtime_asgi.py  test_runtime_headers.py  test_runtime_missing_name.py  test_validation.py
tests/codegen/: test_codegen_snapshots.py  test_graph_snapshots.py
tests/codegen/fixtures/mermaid/: echo-name-flow.mmd  graph.mmd  joke-flow.mmd  order-flow.mmd  payment-flow.mmd  post-story-flow.mmd  user-signup.mmd
tests/codegen/fixtures/yaml/: cat-fact.yaml  dad-joke.yaml  echo-name-flow.yaml  external-flow.yaml  joke-flow.yaml  jsonplaceholder-create-post.yaml  order-flow.yaml  payment-flow.yaml  post-story-flow.yaml  user-signup.yaml  xkcd-latest.yaml
tests/smoke/: cloudbuild.yaml  run_smoke.py
tests/unit/: test_arg_expr.py  test_echo_name_steps.py  test_health.py  test_joke_flow_steps.py  test_order_flow.py  test_post_story_steps.py  test_runtime_errors.py  test_user_and_payments.py
